--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,8 @@ web_modules/
 # Next.js build output
 .next
 out
+.turbo
+.expo
 
 # Nuxt.js build / generate output
 .nuxt
@@ -121,6 +123,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.vscode
 
 # yarn v2
 .yarn/cache
@@ -128,3 +131,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+
