--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "web",
-	"version": "1.0.0",
+	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev -p 3004",
@@ -10,7 +10,12 @@
 		"type-check": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@chakra-ui/next-js": "^2.2.0",
+		"@chakra-ui/react": "^2.8.2",
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
 		"@repo/ui": "workspace:*",
+		"framer-motion": "^11.2.12",
 		"next": "^14.2.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
