--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,34 +1,38 @@
 {
-  "name": "@repo/ui",
-  "version": "0.0.0",
-  "sideEffects": [
-    "**/*.css"
-  ],
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    "./styles.css": "./dist/index.css",
-    "./card": "./src/card.tsx"
-  },
-  "license": "MIT",
-  "scripts": {
-    "build": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
-    "lint": "eslint src/",
-    "dev": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
-    "type-check": "tsc --noEmit"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0"
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/tailwind-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@types/react": "^18.2.61",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
-  }
+	"name": "@repo/ui",
+	"version": "0.0.0",
+	"sideEffects": [
+		"**/*.css"
+	],
+	"files": [
+		"dist"
+	],
+	"exports": {
+		"./styles.css": "./dist/index.css",
+		"./components": "./src/index.ts"
+	},
+	"license": "MIT",
+	"scripts": {
+		"build": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
+		"lint": "eslint src/",
+		"dev": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
+		"type-check": "tsc --noEmit"
+	},
+	"peerDependencies": {
+		"react": "^18.2.0"
+	},
+	"devDependencies": {
+		"@chakra-ui/react": "^2.8.2",
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
+		"@repo/eslint-config": "workspace:*",
+		"@repo/tailwind-config": "workspace:*",
+		"@repo/typescript-config": "workspace:*",
+		"@types/react": "^18.2.61",
+		"autoprefixer": "^10.4.18",
+		"postcss": "^8.4.35",
+		"framer-motion": "^11.2.12",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3"
+	}
 }
