--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,8 @@
 		"framer-motion": "^11.2.12",
 		"next": "^14.2.3",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-icons": "^5.2.1"
 	},
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^14.2.3",
