--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
 		"@repo/eslint-config": "workspace:*",
 		"@repo/tailwind-config": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
+		"@repo/types": "workspace:*",
 		"@types/node": "^20.11.24",
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
