--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,7 @@
 		"@repo/eslint-config": "workspace:*",
 		"@repo/tailwind-config": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
+		"@repo/types": "workspace:*",
 		"@types/react": "^18.2.61",
 		"autoprefixer": "^10.4.18",
 		"next": "^14.2.3",
