--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,13 +18,15 @@
 		"framer-motion": "^11.2.12",
 		"next": "^14.2.3",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-icons": "^5.2.1"
 	},
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^14.2.3",
 		"@repo/eslint-config": "workspace:*",
 		"@repo/tailwind-config": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
+		"@repo/types": "workspace:*",
 		"@types/node": "^20.11.24",
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
