--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,8 +28,10 @@
 		"@repo/eslint-config": "workspace:*",
 		"@repo/tailwind-config": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
+		"@repo/types": "workspace:*",
 		"@types/react": "^18.2.61",
 		"autoprefixer": "^10.4.18",
+		"next": "^14.2.3",
 		"postcss": "^8.4.35",
 		"framer-motion": "^11.2.12",
 		"tailwindcss": "^3.4.1",
