--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,9 @@
 		"lint": "eslint src/",
 		"type-check": "tsc --noEmit"
 	},
+	"dependencies": {
+		"react-icons": "^5.2.1"
+	},
 	"peerDependencies": {
 		"react": "^18.2.0"
 	},
