--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@repo/ui": "workspace:*",
+		"@vercel/analytics": "^1.3.1",
 		"framer-motion": "^11.2.12",
 		"next": "^14.2.3",
 		"react": "^18.2.0",
@@ -24,8 +25,8 @@
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^14.2.3",
 		"@repo/eslint-config": "workspace:*",
-		"@repo/typescript-config": "workspace:*",
 		"@repo/types": "workspace:*",
+		"@repo/typescript-config": "workspace:*",
 		"@types/node": "^20.11.24",
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
