use mono configs and redact unused boilerplate stuff

--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -3,25 +3,24 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
 		"lint": "next lint",
-		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"dev": "storybook dev -p 6006",
+		"build": "storybook build"
 	},
 	"dependencies": {
 		"@repo/ui": "workspace:^",
 		"next": "14.2.5",
-		"react": "^18",
-		"react-dom": "^18"
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@chakra-ui/react": "^2.8.2",
 		"@chromatic-com/storybook": "^1.6.1",
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
+		"@repo/eslint-config": "workspace:*",
 		"@repo/types": "workspace:*",
+		"@repo/typescript-config": "workspace:*",
 		"@storybook/addon-essentials": "^8.2.4",
 		"@storybook/addon-interactions": "^8.2.4",
 		"@storybook/addon-links": "^8.2.4",
@@ -33,13 +32,9 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.5",
 		"eslint-plugin-storybook": "^0.8.0",
 		"framer-motion": "^11.2.12",
-		"postcss": "^8",
 		"storybook": "^8.2.4",
-		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3"
 	}
 }
