--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo build",
-		"dev": "turbo dev",
+		"build:types": "turbo build --filter @repo/types",
+		"dev": "turbo dev --filter web @repo/ui",
+		"dev:storybook": "turbo dev --filter storybook",
 		"lint": "turbo lint",
 		"type-check": "turbo type-check",
 		"clean": "turbo clean",
