--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,12 +26,14 @@
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@repo/eslint-config": "workspace:*",
-		"@repo/typescript-config": "workspace:*",
 		"@repo/types": "workspace:*",
+		"@repo/typescript-config": "workspace:*",
+		"@storybook/react": "^8.2.4",
+		"@storybook/test": "^8.2.4",
 		"@types/react": "^18.2.61",
 		"autoprefixer": "^10.4.18",
-		"next": "^14.2.3",
 		"framer-motion": "^11.2.12",
+		"next": "^14.2.3",
 		"typescript": "^5.3.3"
 	}
 }
