--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,8 @@
 		"dist"
 	],
 	"exports": {
-		"./components": "./src/index.ts"
+		"./components": "./src/index.ts",
+		"./theme": "./src/index.ts"
 	},
 	"license": "MIT",
 	"scripts": {
@@ -22,6 +23,8 @@
 		"react": "^18.2.0"
 	},
 	"devDependencies": {
+		"@chakra-ui/anatomy": "^2.2.1",
+		"@chakra-ui/theme-tools": "^2.1.1",
 		"@chakra-ui/react": "^2.8.2",
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
