--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,8 @@
 		"type-check": "tsc --noEmit"
 	},
 	"dependencies": {
-		"react-icons": "^5.2.1"
+		"react-icons": "^5.2.1",
+		"next": "^14.2.3"
 	},
 	"peerDependencies": {
 		"react": "^18.2.0"
@@ -36,7 +37,6 @@
 		"@types/react": "^18.2.61",
 		"autoprefixer": "^10.4.18",
 		"framer-motion": "^11.2.12",
-		"next": "^14.2.3",
 		"typescript": "^5.3.3"
 	}
 }
