--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,19 +14,23 @@
 	"license": "MIT",
 	"scripts": {
 		"lint": "eslint src/",
-		"type-check": "tsc --noEmit"
+		"type-check": "tsc --noEmit",
+		"theme": "chakra-cli tokens src/theme/theme.ts",
+		"theme:watch": "chakra-cli tokens src/theme/theme.ts --watch"
 	},
 	"dependencies": {
-		"react-icons": "^5.2.1",
-		"next": "^14.2.3"
+		"next": "^14.2.3",
+		"react-icons": "^5.2.1"
 	},
 	"peerDependencies": {
 		"react": "^18.2.0"
 	},
 	"devDependencies": {
 		"@chakra-ui/anatomy": "^2.2.1",
-		"@chakra-ui/theme-tools": "^2.1.1",
+		"@chakra-ui/cli": "^2.4.1",
 		"@chakra-ui/react": "^2.8.2",
+		"@chakra-ui/styled-system": "^2.9.2",
+		"@chakra-ui/theme-tools": "^2.1.1",
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@repo/eslint-config": "workspace:*",
