--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,7 @@
 		"theme:watch": "chakra-cli tokens src/theme/theme.ts --watch"
 	},
 	"dependencies": {
+		"@storybook/blocks": "^8.2.4",
 		"next": "^14.2.3",
 		"react-icons": "^5.2.1"
 	},
