--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,8 @@
 		"lint": "eslint src/",
 		"type-check": "tsc --noEmit",
 		"theme": "chakra-cli tokens src/theme/theme.ts",
-		"theme:watch": "chakra-cli tokens src/theme/theme.ts --watch"
+		"theme:watch": "chakra-cli tokens src/theme/theme.ts --watch",
+		"dev": "chakra-cli tokens src/theme/theme.ts --watch"
 	},
 	"dependencies": {
 		"@storybook/blocks": "^8.2.4",
