--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo build",
-		"dev": "turbo dev",
+		"build:types": "turbo build --filter=@repo/types",
+		"dev": "turbo dev --filter web",
+		"dev:ui": "turbo dev --filter=...storybook --filter=@repo/ui",
 		"lint": "turbo lint",
 		"type-check": "turbo type-check",
 		"clean": "turbo clean",
@@ -12,7 +14,7 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"turbo": "^2.0.6",
-		"typescript": "^5.3.3"
+		"typescript": "^5.4.5"
 	},
 	"packageManager": "pnpm@8.15.6",
 	"engines": {
