--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,30 +8,41 @@
 		"dist"
 	],
 	"exports": {
-		"./components": "./src/index.ts"
+		"./components": "./src/index.ts",
+		"./theme": "./src/index.ts"
 	},
 	"license": "MIT",
 	"scripts": {
 		"lint": "eslint src/",
-		"type-check": "tsc --noEmit"
+		"type-check": "tsc --noEmit",
+		"theme": "chakra-cli tokens src/theme/theme.ts",
+		"theme:watch": "chakra-cli tokens src/theme/theme.ts --watch",
+		"dev": "chakra-cli tokens src/theme/theme.ts --watch"
 	},
 	"dependencies": {
+		"@storybook/blocks": "^8.2.4",
+		"next": "^14.2.3",
 		"react-icons": "^5.2.1"
 	},
 	"peerDependencies": {
 		"react": "^18.2.0"
 	},
 	"devDependencies": {
+		"@chakra-ui/anatomy": "^2.2.1",
+		"@chakra-ui/cli": "^2.4.1",
 		"@chakra-ui/react": "^2.8.2",
+		"@chakra-ui/styled-system": "^2.9.2",
+		"@chakra-ui/theme-tools": "^2.1.1",
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@repo/eslint-config": "workspace:*",
-		"@repo/typescript-config": "workspace:*",
 		"@repo/types": "workspace:*",
+		"@repo/typescript-config": "workspace:*",
+		"@storybook/react": "^8.2.4",
+		"@storybook/test": "^8.2.4",
 		"@types/react": "^18.2.61",
 		"autoprefixer": "^10.4.18",
-		"next": "^14.2.3",
 		"framer-motion": "^11.2.12",
-		"typescript": "^5.3.3"
+		"typescript": "^5.4.5"
 	}
 }
