--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -1,40 +1,45 @@
 {
-	"name": "storybook",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"lint": "next lint",
-		"dev": "storybook dev -p 6006",
-		"build": "storybook build"
-	},
-	"dependencies": {
-		"@repo/ui": "workspace:^",
-		"next": "14.2.5",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"devDependencies": {
-		"@chakra-ui/react": "^2.8.2",
-		"@chromatic-com/storybook": "^1.6.1",
-		"@emotion/react": "^11.11.4",
-		"@emotion/styled": "^11.11.5",
-		"@repo/eslint-config": "workspace:*",
-		"@repo/types": "workspace:*",
-		"@repo/typescript-config": "workspace:*",
-		"@storybook/addon-essentials": "^8.2.4",
-		"@storybook/addon-interactions": "^8.2.4",
-		"@storybook/addon-links": "^8.2.4",
-		"@storybook/addon-onboarding": "^8.2.4",
-		"@storybook/blocks": "^8.2.4",
-		"@storybook/nextjs": "^8.2.4",
-		"@storybook/react": "^8.2.4",
-		"@storybook/test": "^8.2.4",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"eslint-plugin-storybook": "^0.8.0",
-		"framer-motion": "^11.2.12",
-		"storybook": "^8.2.4",
-		"typescript": "^5.4.5"
-	}
+  "name": "storybook",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "lint": "next lint",
+    "dev": "storybook dev -p 6006",
+    "build": "storybook build",
+    "test-storybook": "test-storybook",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@repo/ui": "workspace:^",
+    "next": "14.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@chromatic-com/storybook": "^1.6.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/types": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/nextjs": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/test": "^8.2.9",
+    "@storybook/test-runner": "^0.19.1",
+    "@testing-library/react": "^16.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint-plugin-storybook": "^0.8.0",
+    "framer-motion": "^11.2.12",
+    "jest": "^29.7.0",
+    "storybook": "^8.2.9",
+    "typescript": "^5.4.5"
+  }
 }
