--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -32,13 +32,16 @@
     "@storybook/react": "^8.2.9",
     "@storybook/test": "^8.2.9",
     "@storybook/test-runner": "^0.19.1",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint-plugin-storybook": "^0.8.0",
     "framer-motion": "^11.2.12",
     "jest": "^29.7.0",
+    "playwright": "^1.46.0",
     "storybook": "^8.2.9",
     "typescript": "^5.4.5"
   }
