--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"lint": "turbo lint",
 		"type-check": "turbo type-check",
 		"clean": "turbo clean",
-		"format": "prettier --write \"**/*.{ts,tsx,md}\""
+		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
+		"test": "cd packages/ui && pnpm run test"
 	},
 	"devDependencies": {
 		"prettier": "^3.2.5",
