--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,18 +1,26 @@
 name: Run Tests
 on:
-  push:
+  - pull_request
+  - push
 
 jobs:
   test-ui:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: pnpm/action-setup@v4
         with:
-          node-version: '20'
+          version: 9
+          run_install: false
+          
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm i
