--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"turbo": "^2.0.6",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"@testing-library/react": "^16.0.0",
+		"@types/jest": "^29.5.12",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"ts-jest": "^29.2.4"
 	},
 	"packageManager": "pnpm@8.15.6",
 	"engines": {
