--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
 		"lint": "turbo lint",
 		"type-check": "turbo type-check",
 		"clean": "turbo clean",
-		"format": "prettier --write \"**/*.{ts,tsx,md}\""
+		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
+		"test": "cd packages/ui && pnpm run test"
 	},
 	"devDependencies": {
 		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"turbo": "^2.0.6",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"@testing-library/react": "^16.0.0",
+		"@types/jest": "^29.5.12",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"ts-jest": "^29.2.4"
 	},
 	"packageManager": "pnpm@8.15.6",
 	"engines": {
-		"node": ">=18"
+		"node": ">=20"
 	},
 	"name": "with-tailwind"
 }
