--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,8 @@
 		"type-check": "tsc --noEmit",
 		"theme": "chakra-cli tokens src/theme/theme.ts",
 		"theme:watch": "chakra-cli tokens src/theme/theme.ts --watch",
-		"dev": "chakra-cli tokens src/theme/theme.ts --watch"
+		"dev": "chakra-cli tokens src/theme/theme.ts --watch",
+		"test": "jest"
 	},
 	"dependencies": {
 		"@storybook/blocks": "^8.2.4",
@@ -40,9 +41,15 @@
 		"@repo/typescript-config": "workspace:*",
 		"@storybook/react": "^8.2.4",
 		"@storybook/test": "^8.2.4",
+		"@testing-library/react": "^16.0.0",
+		"@types/jest": "^29.5.12",
 		"@types/react": "^18.2.61",
 		"autoprefixer": "^10.4.18",
 		"framer-motion": "^11.2.12",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"ts-jest": "^29.2.4",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
 	}
 }
